--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.jdbcUrl=jdbc:postgresql://192.168.8.104:5432/freeland
+spring.datasource.username=freeland
+spring.datasource.password=freeland
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults: false
