--- a/application.properties
+++ b/application.properties
@@ -5,3 +5,9 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults: false
+security.basic.enabled=false
+security.oauth2.resources.service-id=uaa-service
+security.oauth2.resources.userInfoUri=http://localhost:8089/uaa/user
+security.oauth2.resources.ssoLogoutUri=http://localhost:8089/uaa/ssoLogout
+security.oauth2.resources.tokenInvalidateUri=http://http://localhost:8089/uaa/invalidateToken
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/    
