--- a/application.properties
+++ b/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=freeland
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults: false
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 security.basic.enabled=false
 security.oauth2.resources.service-id=uaa-service
 security.oauth2.resources.userInfoUri=http://localhost:8089/uaa/user
