--- a/application.yml
+++ b/application.yml
@@ -24,4 +24,4 @@ security:
 eureka:
     client:
         serviceUrl:
-            defaultZone: http://localhost:8761/eureka/    
+            defaultZone: http://ms-eureka-server:8761/eureka/    
