--- a/eureka-server-dev.yml
+++ b/eureka-server-dev.yml
@@ -1,6 +1,10 @@
 server:
     port: 8761
     
+spring:
+    cloud:
+        config:
+            uri: http://ms-config-server:8888    
 eureka:
     instance:
         hostname: localhost
