--- a/ms-oauth-server-development.yml
+++ b/ms-oauth-server-development.yml
@@ -6,7 +6,19 @@ server:
 spring:
     thymeleaf:
         cache: false  
-       
+    mail:
+        host: smtp.gmail.com
+        port: 587
+        username: freeland.rokas@gmail.com
+        password: oks1d4as
+        default-encoding: UTF-8
+        properties:
+            mail:
+                smtp:
+                    auth: true
+                    starttls:
+                        enable: true
+                        
 security:
     basic:    
         enabled: false
@@ -16,3 +28,8 @@ keystore:
     keyname: jwtkey
     password: aaaaaa        
         
+google:
+    recaptcha:
+        key:
+            site: 6LdipIkUAAAAAPJomQ796W15djLMc8zR_WnVEOlp
+            secret: 6LdipIkUAAAAAFORvNfm3CwUT8SYDnC_-dy-WDqt
