--- a/ms-oauth-server-staging.yml
+++ b/ms-oauth-server-staging.yml
@@ -7,11 +7,29 @@ spring:
     thymeleaf:
         cache: false  
        
-security:
-    basic:    
-        enabled: false
+spring:
+    thymeleaf:
+        cache: false  
+    mail:
+        host: smtp.gmail.com
+        port: 587
+        username: freeland.rokas@gmail.com
+        password: oks1d4as
+        default-encoding: UTF-8
+        properties:
+            mail:
+                smtp:
+                    auth: true
+                    starttls:
+                        enable: true
         
 keystore:
     jks: jwtkey.jks
     keyname: jwtkey
-    password: aaaaaa       
+    password: aaaaaa   
+    
+google:
+    recaptcha:
+        key:
+            site: 6LdipIkUAAAAAPJomQ796W15djLMc8zR_WnVEOlp
+            secret: 6LdipIkUAAAAAFORvNfm3CwUT8SYDnC_-dy-WDqt
