--- a/application-staging.yml
+++ b/application-staging.yml
@@ -1,6 +1,6 @@
 spring:
     datasource:
-        jdbcUrl: jdbc:postgresql://192.168.8.104:5432/freeland
+        url: jdbc:postgresql://192.168.8.104:5432/freeland
         username: freeland
         password: freeland
         driverClassName: org.postgresql.Driver
